--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <title>Whis – Invisible Intelligence</title>
+  <title>Whis – Professional AI Copilot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -87,11 +87,11 @@
 
     <div class="relative z-10 text-center max-w-4xl px-6 mb-16">
       <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-white/5 border border-white/10 text-slate-400 text-[10px] font-medium uppercase tracking-widest mb-8">
-        <span class="w-1.5 h-1.5 rounded-full bg-emerald-500 animate-pulse"></span> Undetectable v1.0
+        <span class="w-1.5 h-1.5 rounded-full bg-emerald-500 animate-pulse"></span> Privacy-First v1.0
       </div>
-      <h1 class="text-5xl md:text-7xl font-medium tracking-tight leading-[1.1] mb-8 text-white">Ace the interview.<br /><span class="text-slate-500">Leave no trace.</span></h1>
+      <h1 class="text-5xl md:text-7xl font-medium tracking-tight leading-[1.1] mb-8 text-white">Master every meeting.<br /><span class="text-slate-500">Real-time Intelligence.</span></h1>
       <p class="text-lg text-slate-400 max-w-xl mx-auto mb-10 leading-relaxed font-light">
-        The only AI copilot that floats over your apps. It listens to audio, reads your screen, and gives you the answer. Invisible to screenshare.
+        The advanced AI copilot that integrates with your workflow. It captures audio, analyzes your screen, and provides instant insights. Designed to remain private during presentations.
       </p>
       <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
         <button id="smartDownloadBtn" class="px-8 py-3.5 bg-blue-600 hover:bg-blue-500 text-white rounded-lg font-medium transition flex items-center gap-2 text-sm"><i id="osIcon" class="fa-brands fa-apple"></i> <span id="osText">Download for macOS</span></button>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="mt-20 pt-10 border-t border-white/5 w-full">
-        <p class="text-center text-xs font-bold text-slate-600 uppercase tracking-widest mb-8">Trusted by Engineers at</p>
+        <p class="text-center text-xs font-bold text-slate-600 uppercase tracking-widest mb-8">Used by Professionals at</p>
         <div class="flex flex-wrap justify-center gap-8 md:gap-16 opacity-30 grayscale hover:grayscale-0 transition duration-700">
             <i class="fa-brands fa-google text-2xl text-white"></i>
             <i class="fa-brands fa-amazon text-2xl text-white"></i>
@@ -120,23 +120,23 @@
       <div class="max-w-7xl mx-auto px-6">
           <div class="text-center mb-16">
               <h2 class="text-3xl font-medium text-white mb-4">How It Works</h2>
-              <p class="text-slate-500">Three steps to securing your dream offer.</p>
+              <p class="text-slate-500">Three steps to effortless technical discussions.</p>
           </div>
           <div class="grid md:grid-cols-3 gap-8">
               <div class="p-8 rounded-2xl bg-white/5 border border-white/5 relative group hover:border-white/10 transition">
                   <div class="absolute -top-4 -left-4 w-12 h-12 bg-blue-600 rounded-xl flex items-center justify-center font-bold text-white shadow-lg">1</div>
-                  <h3 class="text-xl font-medium text-white mb-3 mt-4">Connect Audio</h3>
-                  <p class="text-sm text-slate-400 leading-relaxed">Whis taps into your system audio loopback. It hears exactly what you hear—whether it's Zoom, Teams, or Meet—without joining the call as a bot.</p>
+                  <h3 class="text-xl font-medium text-white mb-3 mt-4">Sync Audio</h3>
+                  <p class="text-sm text-slate-400 leading-relaxed">Whis taps into system audio to follow the conversation in real-time—whether it's Zoom, Teams, or Meet—serving as your silent partner.</p>
               </div>
               <div class="p-8 rounded-2xl bg-white/5 border border-white/5 relative group hover:border-white/10 transition">
                   <div class="absolute -top-4 -left-4 w-12 h-12 bg-purple-600 rounded-xl flex items-center justify-center font-bold text-white shadow-lg">2</div>
                   <h3 class="text-xl font-medium text-white mb-3 mt-4">Capture Context</h3>
-                  <p class="text-sm text-slate-400 leading-relaxed">Stuck on a diagram? Use the <strong>Snipping Tool</strong> to capture the screen. Need to add details? Type stealthily into the ghost overlay.</p>
+                  <p class="text-sm text-slate-400 leading-relaxed">Need help with a visual diagram or code block? Use the **Smart Snipping Tool** to capture screen areas or type queries directly.</p>
               </div>
               <div class="p-8 rounded-2xl bg-white/5 border border-white/5 relative group hover:border-white/10 transition">
                   <div class="absolute -top-4 -left-4 w-12 h-12 bg-emerald-600 rounded-xl flex items-center justify-center font-bold text-white shadow-lg">3</div>
-                  <h3 class="text-xl font-medium text-white mb-3 mt-4">Get Answers</h3>
-                  <p class="text-sm text-slate-400 leading-relaxed">The AI analyzes the inputs and displays the answer in a <strong>Ghost Window</strong> that floats over your code editor but is invisible to screenshare.</p>
+                  <h3 class="text-xl font-medium text-white mb-3 mt-4">Instant Guidance</h3>
+                  <p class="text-sm text-slate-400 leading-relaxed">The AI analyzes the inputs and displays helpful insights in a **Private HUD** that overlays your workspace but remains hidden during screen sharing.</p>
               </div>
           </div>
       </div>
@@ -145,8 +145,8 @@
   <section class="py-32 relative bg-page">
     <div class="max-w-7xl mx-auto px-6">
        <div class="mb-16">
-          <h2 class="text-3xl font-medium text-white mb-4">Invisible Overlay.</h2>
-          <p class="text-slate-500 text-lg">See exactly what the interviewer <i>doesn't</i> see.</p>
+          <h2 class="text-3xl font-medium text-white mb-4">Private Overlay.</h2>
+          <p class="text-slate-500 text-lg">See the information you need, when you need it.</p>
        </div>
        
        <div class="grid md:grid-cols-3 gap-6 h-auto md:h-[500px]">
@@ -154,9 +154,9 @@
              <div class="absolute inset-0 bg-gradient-to-b from-transparent to-blue-900/10 opacity-0 group-hover:opacity-100 transition"></div>
              <div class="relative z-20 h-full flex flex-col justify-between">
                  <div>
-                    <div class="flex items-center gap-3 mb-6"><div class="w-10 h-10 rounded-lg bg-blue-500/20 flex items-center justify-center text-blue-400"><i class="fa-solid fa-ghost"></i></div><span class="text-xs font-bold text-blue-400 uppercase tracking-widest">Interactive Preview</span></div>
-                    <h3 class="text-2xl font-medium text-white mb-2">The "Ghost" Window</h3>
-                    <p class="text-slate-400 max-w-sm text-sm leading-relaxed">This window floats on top of your VS Code. To you, it's visible. To the interviewer's screenshare, it simply doesn't exist.</p>
+                    <div class="flex items-center gap-3 mb-6"><div class="w-10 h-10 rounded-lg bg-blue-500/20 flex items-center justify-center text-blue-400"><i class="fa-solid fa-layer-group"></i></div><span class="text-xs font-bold text-blue-400 uppercase tracking-widest">Interactive Preview</span></div>
+                    <h3 class="text-2xl font-medium text-white mb-2">The Private HUD</h3>
+                    <p class="text-slate-400 max-w-sm text-sm leading-relaxed">This window floats on top of your editor. To you, it's a helpful assistant. To screen sharing software, it's completely transparent and non-intrusive.</p>
                  </div>
 
                  <div class="mt-8 h-56 w-full bg-[#1e1e1e] border border-white/10 rounded-xl overflow-hidden relative shadow-2xl">
@@ -168,10 +168,10 @@
                     <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[85%] z-30">
                         <div class="bg-black/90 backdrop-blur-xl border border-white/20 rounded-lg p-3 shadow-2xl flex items-center gap-3">
                             <div class="w-2 h-2 rounded-full bg-blue-500 animate-pulse-glow shadow-[0_0_10px_#3b82f6]"></div>
-                            <div class="text-xs font-mono text-slate-200 overflow-hidden whitespace-nowrap animate-type border-r-2 border-transparent pr-1" style="width:0; animation: type 2s steps(30, end) forwards 0.5s;">Reverse a linked list...</div>
+                            <div class="text-xs font-mono text-slate-200 overflow-hidden whitespace-nowrap animate-type border-r-2 border-transparent pr-1" style="width:0; animation: type 2s steps(30, end) forwards 0.5s;">Analyzing complexity...</div>
                         </div>
                         <div class="mt-2 bg-[#0A0A0A] border border-blue-500/20 rounded-lg p-3 shadow-xl opacity-0 animate-pop-in" style="animation-delay: 2.8s;">
-                            <div class="flex justify-between items-center mb-2"><span class="text-[10px] text-blue-400 font-bold uppercase">Suggestion</span><i class="fa-solid fa-copy text-slate-600 text-[10px]"></i></div>
+                            <div class="flex justify-between items-center mb-2"><span class="text-[10px] text-blue-400 font-bold uppercase">Insight</span><i class="fa-solid fa-copy text-slate-600 text-[10px]"></i></div>
                             <div class="space-y-1.5"><div class="h-1.5 w-3/4 bg-slate-700 rounded-full"></div><div class="h-1.5 w-1/2 bg-slate-800 rounded-full"></div></div>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
 
           <div class="flex flex-col gap-6">
               <div class="glass-card rounded-2xl p-8 flex-1 hover:bg-white/5 transition"><i class="fa-solid fa-microphone-lines text-slate-400 text-xl mb-4"></i><h3 class="text-lg font-medium text-white mb-1">System Audio</h3><p class="text-sm text-slate-500">Capture internal audio loopback directly.</p></div>
-              <div class="glass-card rounded-2xl p-8 flex-1 hover:bg-white/5 transition"><i class="fa-solid fa-crop-simple text-slate-400 text-xl mb-4"></i><h3 class="text-lg font-medium text-white mb-1">Screenshare Context</h3><p class="text-sm text-slate-500">Snip a problem area for instant OCR analysis.</p></div>
+              <div class="glass-card rounded-2xl p-8 flex-1 hover:bg-white/5 transition"><i class="fa-solid fa-crop-simple text-slate-400 text-xl mb-4"></i><h3 class="text-lg font-medium text-white mb-1">Visual Context</h3><p class="text-sm text-slate-500">Snip a complex area for instant OCR analysis.</p></div>
           </div>
        </div>
     </div>
@@ -197,15 +197,15 @@
                           <th class="px-6 py-4 rounded-tl-lg font-medium">Feature</th>
                           <th class="px-6 py-4 font-medium">Free</th>
                           <th class="px-6 py-4 font-medium text-blue-400">Pro</th>
-                          <th class="px-6 py-4 rounded-tr-lg font-medium text-purple-400">Stealth</th>
+                          <th class="px-6 py-4 rounded-tr-lg font-medium text-purple-400">Elite</th>
                       </tr>
                   </thead>
                   <tbody class="text-slate-400 divide-y divide-white/5">
                       <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Daily Responses</td><td class="px-6 py-4">10</td><td class="px-6 py-4 text-white">Unlimited</td><td class="px-6 py-4 text-white">Unlimited</td></tr>
                       <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Audio Input</td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td></tr>
                       <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Screenshot OCR</td><td class="px-6 py-4 text-xs">Limited</td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td></tr>
-                      <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Ghost Overlay</td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-purple-500"></i></td></tr>
-                      <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Stealth Text Input</td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-purple-500"></i></td></tr>
+                      <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Private HUD</td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-purple-500"></i></td></tr>
+                      <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Direct Input Mode</td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-purple-500"></i></td></tr>
                   </tbody>
               </table>
           </div>
@@ -299,7 +299,7 @@
             const r=await fetch(`${BACKEND_URL}/api/user/status`,{headers:{'x-google-id':gid}});const d=await r.json();
             const badge=document.getElementById('navPlanBadge'); const modalBadge=document.getElementById('modalPlanStatus');
             if(d.active){
-                badge.textContent=(d.tier==='pro_plus'?'STEALTH':'PRO'); badge.className="text-[9px] font-bold text-emerald-400 uppercase tracking-wide";
+                badge.textContent=(d.tier==='pro_plus'?'ELITE':'PRO'); badge.className="text-[9px] font-bold text-emerald-400 uppercase tracking-wide";
                 modalBadge.textContent="ACTIVE"; modalBadge.className="px-2 py-1 rounded text-[10px] font-bold bg-emerald-500/20 text-emerald-400 border border-emerald-500/20";
                 document.getElementById('modalExpiryDate').textContent = new Date(d.validUntil).toLocaleDateString();
             } else {
@@ -307,7 +307,7 @@
                 modalBadge.textContent="INACTIVE"; modalBadge.className="px-2 py-1 rounded text-[10px] font-bold bg-slate-500/20 text-slate-400 border border-slate-500/20";
                 document.getElementById('modalExpiryDate').textContent = "Forever";
             }
-            document.getElementById('modalUserName').textContent=currentUser.name; document.getElementById('modalPlanName').textContent=d.tier==='pro_plus'?'Pro + Stealth':(d.tier==='pro'?'Pro Plan':'Starter Free');
+            document.getElementById('modalUserName').textContent=currentUser.name; document.getElementById('modalPlanName').textContent=d.tier==='pro_plus'?'Pro + Elite':(d.tier==='pro'?'Pro Plan':'Starter Free');
             const tbody=document.getElementById('paymentHistoryBody'); tbody.innerHTML='';
             
             if(d.orders && d.orders.length > 0) { 
@@ -320,7 +320,7 @@
                     tbody.innerHTML+=`
                     <tr>
                         <td class="p-2 border-b border-white/5">${new Date(o.date).toLocaleDateString()}</td>
-                        <td class="p-2 border-b border-white/5">${o.tier==='pro_plus'?'Stealth':'Pro'}</td>
+                        <td class="p-2 border-b border-white/5">${o.tier==='pro_plus'?'Elite':'Pro'}</td>
                         <td class="p-2 border-b border-white/5">
                             <span class="text-[9px] font-bold px-1.5 py-0.5 rounded border ${statusColor}">${statusText}</span>
                         </td>
