--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="w-full max-w-7xl px-6 flex items-center justify-between">
       <a href="/" class="flex items-center gap-2 group">
         <div class="w-8 h-8 rounded-lg bg-white/10 flex items-center justify-center border border-white/5"><span class="text-xs font-bold text-white tracking-widest">WH</span></div>
-        <span class="text-sm font-semibold text-slate-300 group-hover:text-white transition">whis.ai</span>
+        <span class="text-sm font-semibold text-slate-300 group-hover:text-white transition">whis-ai</span>
       </a>
       <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-500">
         <a href="#how-it-works" class="hover:text-white transition">How it Works</a>
@@ -131,12 +131,12 @@
               <div class="p-8 rounded-2xl bg-white/5 border border-white/5 relative group hover:border-white/10 transition">
                   <div class="absolute -top-4 -left-4 w-12 h-12 bg-purple-600 rounded-xl flex items-center justify-center font-bold text-white shadow-lg">2</div>
                   <h3 class="text-xl font-medium text-white mb-3 mt-4">Capture Context</h3>
-                  <p class="text-sm text-slate-400 leading-relaxed">Need help with a visual diagram or code block? Use the **Smart Snipping Tool** to capture screen areas or type queries directly.</p>
+                  <p class="text-sm text-slate-400 leading-relaxed">Need help with a visual diagram or code block? Use the screenshot to capture screen areas or type queries directly.</p>
               </div>
               <div class="p-8 rounded-2xl bg-white/5 border border-white/5 relative group hover:border-white/10 transition">
                   <div class="absolute -top-4 -left-4 w-12 h-12 bg-emerald-600 rounded-xl flex items-center justify-center font-bold text-white shadow-lg">3</div>
                   <h3 class="text-xl font-medium text-white mb-3 mt-4">Instant Guidance</h3>
-                  <p class="text-sm text-slate-400 leading-relaxed">The AI analyzes the inputs and displays helpful insights in a **Private HUD** that overlays your workspace but remains hidden during screen sharing.</p>
+                  <p class="text-sm text-slate-400 leading-relaxed">The AI analyzes the inputs and displays helpful insights in an invisible screenshare screen that overlays your workspace but remains hidden during screen sharing.</p>
               </div>
           </div>
       </div>
@@ -155,7 +155,7 @@
              <div class="relative z-20 h-full flex flex-col justify-between">
                  <div>
                     <div class="flex items-center gap-3 mb-6"><div class="w-10 h-10 rounded-lg bg-blue-500/20 flex items-center justify-center text-blue-400"><i class="fa-solid fa-layer-group"></i></div><span class="text-xs font-bold text-blue-400 uppercase tracking-widest">Interactive Preview</span></div>
-                    <h3 class="text-2xl font-medium text-white mb-2">The Private HUD</h3>
+                    <h3 class="text-2xl font-medium text-white mb-2">The invisible screenshare screen</h3>
                     <p class="text-slate-400 max-w-sm text-sm leading-relaxed">This window floats on top of your editor. To you, it's a helpful assistant. To screen sharing software, it's completely transparent and non-intrusive.</p>
                  </div>
 
@@ -204,7 +204,7 @@
                       <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Daily Responses</td><td class="px-6 py-4">10</td><td class="px-6 py-4 text-white">Unlimited</td><td class="px-6 py-4 text-white">Unlimited</td></tr>
                       <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Audio Input</td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td></tr>
                       <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Screenshot OCR</td><td class="px-6 py-4 text-xs">Limited</td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-blue-600"></i></td></tr>
-                      <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Private HUD</td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-purple-500"></i></td></tr>
+                      <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">invisible screenshare screen</td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-purple-500"></i></td></tr>
                       <tr class="bg-card"><td class="px-6 py-4 text-white font-medium">Direct Input Mode</td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-minus text-slate-700"></i></td><td class="px-6 py-4"><i class="fa-solid fa-check text-purple-500"></i></td></tr>
                   </tbody>
               </table>
