--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         <span class="w-1.5 h-1.5 rounded-full bg-red-500 shadow-[0_0_10px_rgba(239,68,68,0.5)] animate-pulse"></span> 1,240 Users Online Now
       </div>
       
-      <h1 class="text-4xl md:text-7xl lg:text-8xl font-semibold tracking-tight leading-[1.1] mb-6 md:mb-8 gradient-text">
-        Don't Just Prepare.<br />
-        <span class="text-white">Have The Answers.</span>
+      <h1 class="text-4xl md:text-7xl lg:text-8xl font-semibold tracking-tight leading-[1.1] mb-6 md:mb-8">
+        <span class="block gradient-text">Don't Just Prepare.</span>
+        <span class="block text-white mt-1 md:mt-2">Have The Answers.</span>
       </h1>
       
       <p class="text-base md:text-lg text-slate-400 max-w-xl mx-auto mb-8 md:mb-10 leading-relaxed font-light">
