--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </h1>
       
       <p class="text-base md:text-lg text-slate-400 max-w-xl mx-auto mb-8 md:mb-10 leading-relaxed font-light">
-        The system is broken. The competition is impossible. Why struggle alone? <br class="hidden md:block">
+        The system is broken. Competition looks impossible. Why struggle alone? <br class="hidden md:block">
         <span class="text-slate-200 font-medium">Get the answer before they finish asking the question.</span> <br>
         Invisible. Undetectable. Guaranteed.
       </p>
