--- a/index.html
+++ b/index.html
@@ -638,7 +638,8 @@
         if (!amount) return "...";
         if(discount > 0) {
             const discounted = (amount * (1 - discount/100)).toFixed(2);
-            return `<span>₹${discounted}</span> <span class="text-sm line-through text-slate-500 opacity-60">₹${amount.toFixed(2)}</span>`;
+            // Returns: ₹999 <span strikethrough>₹1999</span> <span badge>50% OFF</span>
+            return `<span>₹${discounted}</span> <span class="text-sm line-through text-slate-500 opacity-60 mx-1">₹${amount.toFixed(2)}</span> <span class="text-[10px] font-bold text-black bg-accent px-1.5 py-0.5 rounded align-middle">${discount}% OFF</span>`;
         }
         return `₹${amount.toFixed(2)}`;
     }
@@ -763,7 +764,7 @@
         typeCode();
         checkUser();
         detectOS();
-        fetchPricingConfig();
+        fetchPricingConfig(); // New fetch
         setTimeout(initPhysics, 500);
     });
   </script>
