--- a/index.html
+++ b/index.html
@@ -738,7 +738,30 @@
                 const rzp1 = new Razorpay({
                     "key": data.key_id, "amount": data.amount, "currency": data.currency, "name": "Whis AI",
                     "description": isUpgrade ? "Upgrade" : "License", "order_id": data.order_id,
-                    "handler": function (response){ window.location.reload(); },
+                    "handler": async function (response){ 
+                        // --- VITAL FIX: Call Backend to Verify & Update DB ---
+                        try {
+                            const verifyRes = await fetch(`${BACKEND_URL}/api/payment/verify`, {
+                                method: 'POST',
+                                headers: {'Content-Type': 'application/json'},
+                                body: JSON.stringify({
+                                    razorpay_order_id: response.razorpay_order_id,
+                                    razorpay_payment_id: response.razorpay_payment_id,
+                                    razorpay_signature: response.razorpay_signature
+                                })
+                            });
+                            const verifyData = await verifyRes.json();
+                            if(verifyData.success){
+                                alert("Payment Successful! Upgrading your account...");
+                                window.location.reload(); 
+                            } else {
+                                alert("Payment verification failed. Please contact support.");
+                            }
+                        } catch(e) {
+                            console.error(e);
+                            alert("Network error during verification. Check your connection.");
+                        }
+                    },
                     "theme": { "color": "#00f2ff" }
                 });
                 rzp1.open();
